--- a/pb5.yml
+++ b/pb5.yml
@@ -1,5 +1,5 @@
 ---
-    - hosts: linuxlocals
+    - hosts: linuxservers
       become: true
       tasks:
       - name: Create multiple directories
